Implement CRUD endpoints for competition management