@@ -8,9 +8,13 @@ import org.wora.competition.dto.CompetitionResponseDto;
 import org.wora.generalResult.GeneralResult;
 import org.wora.generalResult.GeneralResultRepository;
 
+import java.lang.reflect.Array;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.wora.common.GenericService;
@@ -25,72 +29,81 @@ public class CompetitionServiceImpl implements GenericService<CompetitionRequest
     private GeneralResultRepository generalResultRepository;
 
     @Autowired
-    private ModelMapper modelMapper;
+    private  CompetitionMapper competitionMapper;
 
     private static final Logger logger = LoggerFactory.getLogger(CompetitionServiceImpl.class);
 
-    @Override
     public CompetitionResponseDto save(CompetitionRequestDto competitionRequestDto) {
-        Competition competition = modelMapper.map(competitionRequestDto, Competition.class);
+        Competition competition = competitionMapper.toEntity(competitionRequestDto);
         Competition savedCompetition = competitionRepository.save(competition);
-        return modelMapper.map(savedCompetition, CompetitionResponseDto.class);
+        return competitionMapper.toDto(savedCompetition);
     }
+
 
     @Override
     public List<CompetitionResponseDto> findAll() {
-        return competitionRepository.findAll()
-                .stream()
-                .map(competition -> modelMapper.map(competition, CompetitionResponseDto.class))
-                .toList();
+
+        try{
+            List<Competition>competitions= competitionRepository.findAll();
+                 return competitions.stream()
+                    .map(competitionMapper::toDto)
+                    .collect(Collectors.toList());
+        }catch (Exception e ){
+            e.printStackTrace();
+            return new ArrayList<>();
+        }
     }
+
 
     @Override
     public Optional<CompetitionResponseDto> findById(Long id) {
-        logger.info("logger initialized " + id);
         return competitionRepository.findById(id)
-                .map(competition -> modelMapper.map(competition, CompetitionResponseDto.class));
+                .map(competitionMapper::toDto);
     }
+
+
 
     @Override
     public CompetitionResponseDto update(CompetitionRequestDto competitionRequestDto, Long id) {
         logger.info("Updating competition with id: " + id);
 
         Optional<Competition> optionalCompetition = competitionRepository.findById(id);
-
         if (optionalCompetition.isEmpty()) {
             return null;
         }
 
         Competition existingCompetition = optionalCompetition.get();
-        modelMapper.map(competitionRequestDto, existingCompetition);
+
+        CompetitionMapper.INSTANCE.updateEntityFromDto(competitionRequestDto, existingCompetition);
+
         Competition updatedCompetition = competitionRepository.save(existingCompetition);
 
-        return modelMapper.map(updatedCompetition, CompetitionResponseDto.class);
+        return CompetitionMapper.INSTANCE.toDto(updatedCompetition);
     }
+
 
     @Override
     public void deleteById(Long id) {
         competitionRepository.deleteById(id);
     }
-
     public List<CompetitionResponseDto> findByDateRange(LocalDate startDate, LocalDate endDate) {
         List<Competition> competitions = competitionRepository.findByStartDateBetween(startDate, endDate);
         return competitions.stream()
-                .map(competition -> modelMapper.map(competition, CompetitionResponseDto.class))
+                .map(competitionMapper::toDto)
                 .toList();
     }
 
     public List<CompetitionResponseDto> findByLocation(String location) {
         List<Competition> competitions = competitionRepository.findByLocation(location);
         return competitions.stream()
-                .map(competition -> modelMapper.map(competition, CompetitionResponseDto.class))
+                .map(competitionMapper::toDto)
                 .toList();
     }
 
-    // public List<GeneralResultResponseDto> findCyclistRankings(Long competitionId) {
-    //     List<GeneralResult> generalResults = generalResultRepository.findByCompetitionIdOrderByGeneralRankAsc(competitionId);
-    //     return generalResults.stream()
-    //             .map(result -> modelMapper.map(result, GeneralResultResponseDto.class))
-    //             .toList();
-    // }
+//    public List<GeneralResultResponseDto> findCyclistRankings(Long competitionId) {
+//        List<GeneralResult> generalResults = generalResultRepository.findByCompetitionIdOrderByGeneralRankAsc(competitionId);
+//        return generalResults.stream()
+//                .map(generalResultMapper::toDto)
+//                .toList();
+//    }
 }
